<resources>
    <!-- Signin Activity -->
    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>


    <!-- End of Signin Activity -->

    <string name="app_name">Bibles for America</string>
    <string name="strOrderTitle">Place Your Free Order</string>
    <string name="strOrderDescription">All orders are completely free, including shipping. Bibles for America respects your privacy. We do not fill orders made on behalf of others. Please order for yourself only.
    </string>
    <string name="strOrderBasicInfo">BASIC INFORMATION</string>
    <string name="strOrderShippingInfo">SHIPPING INFORMATION</string>
    <string name="strFirstName">First Name*</string>
    <string name="strLastName">Last Name*</string>
    <string name="strEmail">Email Address*</string>
    <string name="strAddress1">Street Address*</string>
    <string name="strAddress2">Suite or Apartment #(Optional)</string>
    <string name="strCity">City*</string>
    <string name="strZipCode">Zip code*</string>
    <string name="strBlogSubscribe">Yes, send me weekly BfA blog posts and notify me when BfA offers a new book title.</string>
    <string name="strPlaceOrder">Place Order</string>

    <!-- Menu Items -->
    <string name="strMenuOrder">Order Bible</string>
    <string name="strMenuWebsite">BfA Website</string>
    <string name="strMenuDonation">Give to BfA</string>


    <!-- Popup Menu Title -->
    <string name="action_order">Order Bible</string>
    <string name="action_signout">Sign out</string>
    <string name="action_signin">Sign in</string>
    <string name="action_bfa">BfA Website</string>
    <string name="action_download">Download Books</string>
    <string name="action_blble_study">Bible Study</string>
    <string name="action_donation">Give to BfA</string>


    <!-- Popup menu url -->
    <string name="url_bfa">http://www.bfa.org"</string>
    <string name="url_download">"http://biblesforamerica.org/books/</string>
    <string name="url_blble_study">file:///android_asset/html/index.html</string>
    <string name="url_donation">https://contributions.biblesforamerica.org/support-bfa</string>


    <!--string name="strMenuLocation">Location</string>
    <string name="strMenuSettings">Settings</string-->

    <string-array name="strStates">
        <item>AL</item>
        <item>AK</item>
        <item>AS</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FM</item>
        <item>FL</item>
        <item>GA</item>
        <item>GU</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MH</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>MP</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PW</item>
        <item>PA</item>
        <item>PR</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VI</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
        <item>AE</item>
        <item>AA</item>
        <item>AE</item>
        <item>AE</item>
        <item>AE</item>
        <item>AP</item>
    </string-array>

    <string name="msgOrderSent">Order has been sent successfully!</string>
    <string name="server_client_id">1097183891794-jef61o7o3tmbgb8tcokeqp6nrem2vfn0.apps.googleusercontent.com</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://biblestudy.herokuapp.com\",\n  }\n}]</string>

</resources>
