<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_order"
        android:orderInCategory="100"
        android:title="@string/action_order"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_download"
        android:orderInCategory="200"
        android:title="@string/action_download"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_blble_study"
        android:orderInCategory="300"
        android:title="@string/action_blble_study"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_donation"
        android:orderInCategory="300"
        android:title="@string/action_donation"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bfa"
        android:orderInCategory="400"
        android:title="@string/action_bfa"
        app:showAsAction="never" />

</menu>