<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblOrderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strOrderTitle"
            style="@style/CustomTitleStyle">
        </TextView>

        <TextView
            android:id="@+id/lblOrderDesc"
            style="@style/CustomDescriptionStyle"
            android:layout_height="wrap_content"
            android:text="@string/strOrderDescription"></TextView>

        <TextView
            android:id="@+id/lblBasicInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strOrderBasicInfo"
            style="@style/CustomSubTitleStyle">
        </TextView>

        <EditText
            android:id="@+id/txtFirstName"
            style="@style/CustomTextBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/strFirstName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtLastName"
            style="@style/CustomTextBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/strLastName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            style="@style/CustomTextBoxStyle"
            android:hint="@string/strEmail"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/txtShippingInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strOrderShippingInfo"
            style="@style/CustomSubTitleStyle">
        </TextView>

        <EditText
            android:id="@+id/txtAddress1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:hint="@string/strAddress1"
            style="@style/CustomTextBoxStyle"
            android:inputType="text|textPostalAddress" />

        <EditText
            android:id="@+id/txtAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            style="@style/CustomTextBoxStyle"
            android:hint="@string/strAddress2"
            android:inputType="text|textPostalAddress" />

        <EditText
            android:id="@+id/txtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            style="@style/CustomTextBoxStyle"
            android:hint="@string/strCity"
            android:inputType="text|textPostalAddress" />

        <Spinner
            android:id="@+id/spinerStates"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/edit_text"
            style="@style/CustomTextBoxStyle" />


        <EditText
            android:id="@+id/txtZipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            style="@style/CustomTextBoxStyle"
            android:hint="@string/strZipCode"
            android:inputType="textPostalAddress" />

        <CheckBox
            android:id="@+id/chkBlogSubscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strBlogSubscribe" />

        <Button
            android:id="@+id/btnPlaceOrder"
            style="@style/CustomTextBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGold"
            android:text="@string/strPlaceOrder"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomSubTitleStyle">
        </TextView>

    </LinearLayout>
</ScrollView>